2002-05-28  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/relay/RelayLP.java:
	Check getSource() for null before proceeding with Relay.Target
	processing. This handles the case of an all-in-one-class Relay
	implementation being erroneously handled as a Target at the Source
	end. The opposite case of mishandling as a Source at the Target
	end is already dealt with.

	* org/cougaar/core/relay/Relay.java:
	Augment javadoce with cautions about aliasing possibilities when
	sending Relays between agents in the same node.

2002-05-22  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/service/SchedulerService.java:
	Add a little bit of javadoc for parameters.

	* org/cougaar/core/relay/RelayLP.java:
	Fix bug handling null change report collection. Ya gotta create a
	new collection before you can add to it.

	* org/cougaar/core/blackboard/Distributor.java:
	Silence "persistence overdue" message -- it's misleading and
	unnecessary -- persistence is always overdue before it's
	performed. That's why it happens.

	* org/cougaar/core/adaptivity/TaskSensorPlugin.java:
	Fix problem with measuring the dispose rate. The removed list of
	an incremental subscription having a DynamicUnaryPredicate is not
	populated with objects just because the predicate becomes false
	unless a publishChange is done on the object. That is not normally
	done when a Task is disposed (allocated, expanded, etc.) so we
	would not see any disposes unless the Task were actually
	rescinding. Instead, we need to separately subscribe to the plan
	elements to count disposes.

2002-05-21  Michael Thome  <mthome@bbn.com>

	* SimpleAgent
	Change the load order so that all direct subcomponents are loaded
	before the PluginManager is started.  This fixes bug 1344.

	* NewTask, TaskImpl
	Added addPrepositionalPhrase(PP), setPrepositionalPhrases(PP), and
	deprecated setPrepositionalPhrases(PP) as confusing.

2002-05-20  Michael Thome  <mthome@bbn.com>

	* NodeAgent